--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.android.extensions'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -34,6 +36,9 @@ android {
     buildFeatures {
         viewBinding true
     }
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
@@ -47,17 +52,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-//    // Room
-//    implementation "androidx.room:room-runtime:2.5.1"
-////    kapt "androidx.room:room-compiler:2.2.5"
-//    annotationProcessor "androidx.room:room-compiler:2.5.1"
-//    // Kotlin Extensions and Coroutines support for Room
-//    implementation "androidx.room:room-ktx:2.5.1"
-//
-////    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
-////    implementation 'androidx.lifecycle:lifecycle-livedata:2.5.1'
-////    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 
     //Navigation Components
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
@@ -82,4 +76,8 @@ dependencies {
     //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
 }
